# sconsider

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .project  .pydevproject  .pylintrc  .pypirc  Anything.py  CHANGELOG.adoc  CHANGES.md  Callback.py  ChangeDLLNames.py  ChangeImportLines.py  ConfigureHelper.py  KillableThread.py  LibFinder.py  Logging.py  MANIFEST.in  README  README.adoc  README.md  README.txt  SConsider.py  ServerExtensions.py  SocketHelpers.py  SomeUtils.py  StanfordUtils.py  StanfordUtils1.3.py  externals.scons  externals.scons.py  logging.yaml  pip-requirements.txt  pytest.ini  requirements.lint.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py  (+2 more)
SConsider/: Anything.py  Callback.py  ConfigureHelper.py  KillableThread.py  LibFinder.py  Logging.py  Main.py  PackageRegistry.py  PopenHelper.py  ServerExtensions.py  SomeUtils.py  __init__.py  _version.py  deprecation.py  dictconfig.py  logging.yaml  requirements.txt  singleton.py  version.py
eol_scons/: __init__.py
maintenance/: ChangeDLLNames.py  ChangeImportLines.py  LibPyRenaming.py
site_tools/: CompilerLibsInstallBuilder.py  DoxygenBuilder.py  EclipseDebugLaunchWriter.py  Package.py  RunBuilder.py  SCBWriter.py  SubstInFileBuilder.py  SystemLibsInstallBuilder.py  TargetPrinter.py  TestfwTransformer.py  ThirdParty.py  WorkingSetWriter.py  addLibrary.py  applelink.py  coast_options.py  default.py  defines.sh  doxygen.py  foundationLib.py  g++.py  gcc.py  generateScript.py  gnulink.py  precompiledLibraryInstallBuilder.py  registerObjects.py  setupBuildTools.py  (+4 more)
(+89 files in other folders)
