[metadata]
license-file = LICENSE.txt

[bdist_wheel]
python-tag = py2

[flake8]
statistics = 1
ignore = E501

[nosetests]
with-xunit = true
where = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = SConsider/_version.py
versionfile_build = SConsider/_version.py
tag_prefix =
parentdir_prefix = SConsider-
