[aliases]
test=pytest

[metadata]
license-file = LICENSE.txt
description-file = README.md

[bdist_wheel]
python-tag = py2

[flake8]
statistics = 1
ignore = E501

[versioneer]
VCS = git
style = pep440-old
versionfile_source = SConsider/_version.py
versionfile_build = SConsider/_version.py
tag_prefix =
parentdir_prefix = SConsider-

